# prism-agent-cli

./: Cargo.toml
.github/workflows/: contract-export.yml
agent-cli/: Cargo.toml
agent-cli/src/: args.rs  command_router.rs  config_commands.rs  config_model.rs  config_resolver.rs  config_store.rs  config_wizard.rs  header_renderer.rs  main.rs  output.rs  permissions.rs  repl.rs  repl_commands.rs  status_snapshot.rs  tool_executor.rs  trace_commands.rs  turn_runner.rs
agent-cli/src/local_tools/: common.rs  memory.rs  mod.rs  shell.rs  subagent.rs  workspace.rs
agent-cli/src/tui/: event_bridge.rs  history_search.rs  icons.rs  input.rs  input_buffer.rs  layout.rs  mod.rs  renderer.rs  shell.rs  suggestions.rs  theme.rs  transcript.rs  types.rs  view_model.rs
agent-cli/tests/: file_analysis.rs
agent-core/: Cargo.toml
agent-core/src/: callchain.rs  config.rs  document_artifacts.rs  event_sink.rs  events.rs  instructions.rs  lib.rs  message_builder.rs  provider.rs  review_runtime.rs  session.rs  streaming.rs  telemetry.rs  tools.rs  turn_engine.rs
agent-core/src/providers/: chat_completions.rs  mod.rs  openai.rs
agent-core/src/workflows/: coordinator.rs  literature_review.rs  mod.rs  paper_drafting.rs  peer_review.rs
src/: lib.rs  main.rs
src/commands/: mod.rs
src/entrypoints/: cli.rs
src/output/: human.rs  jsonl.rs  mod.rs
src/protocol/: events.rs  mod.rs
src/providers/: mod.rs
src/runtime/: mod.rs  session_kernel.rs  turn_loop.rs
src/services/: mod.rs  turn_service.rs
src/state/: mod.rs  runtime_state.rs
src/tools/: mod.rs
src/ui/: mod.rs
tests/: command_router.rs  protocol_contract.rs  smoke_boot.rs  suspend_resume_flow.rs
tests/fixtures/: ping.jsonl
