[package]
name = "prism-agent-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "agent-runtime"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
