[package]
name = "agent-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "agent-runtime"
path = "src/main.rs"

[dependencies]
agent-core = { path = "../agent-core" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
clap = { version = "4", features = ["derive", "env"] }

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
