[package]
name = "agent-core"
version = "0.1.0"
edition = "2021"

[features]
test-util = []

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
reqwest.workspace = true
chrono.workspace = true
uuid.workspace = true
futures.workspace = true
which = "7"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
